--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,38 +1,36 @@
  <ion-content class = "bg">
   <div class="img">
     <img src ="../assets/imgs/images.png" alt="" width="50%" height="50%">
+
   </div>
 <div class = "container">
-
     <ion-list>
-
-            <ion-item class ="item1">
-                <ion-icon name="contact" item-left></ion-icon>
+            <ion-item class ="item">
+                <ion-icon name="contact-outline" item-left></ion-icon>
                 <ion-label stacked>NAME</ion-label>
                 <ion-input type="text" placeholder="Enter Name"></ion-input>
               </ion-item>
 
 
-              <ion-item class ="item2">
-                  <ion-icon name="lock" item-left> </ion-icon>
+              <ion-item class ="item">
+                  <ion-icon name="lock-outline" item-left> </ion-icon>
                   <ion-label stacked>PASSWORD</ion-label>
                 <ion-input type="password" placeholder="*******"></ion-input>
-                <button ion-button  item-end  class = "btnH"> Help</button>
+                <button ion-button  item-right clear  class = "btnH"> Help</button>
               </ion-item>
 
 
       </ion-list>
     </div>
 
-      <div class ="btn">
+      <div class ="btnDiv" >
 
-      <button ion-button color="light" outline round large block  >Sign In</button>
+      <button ion-button color="light" outline round block large class ="btn">Sign In</button>
     </div>
 
-
-    <p>DON'T HAVE AN ACCOUNT? </p>
-
-    <div class="btnSign"><button ion-button color="light" clear>SIGN UP</button></div>
+<div>
+    <p>DON'T HAVE AN ACCOUNT? <button ion-button class ="btnSignUp" clear item-end>SIGN UP</button></p>
+  </div>
 
 
 
